Add support for YAML frontmatter.

--- a/core/tests/blog/templates/default.mustache
+++ b/core/tests/blog/templates/default.mustache
@@ -29,6 +29,7 @@ nav>b {
 
         {{#date}}
         <div class="postdate">{{.}}</div>
+        <h1>{{name}}</h1>
         {{/date}}
 
         {{{body}}}
